--- a/public/serverConfig.json
+++ b/public/serverConfig.json
@@ -1,6 +1,6 @@
 {
   "Version": "4.4.0",
-  "Title": "Agileboot",
+  "Title": "崖山POC",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
